--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,8 +4,8 @@
         <ul>
             <li></li>
             <li><a href="https://www.ivytech.edu/" target="_blank">IvyTech</a></li>
-            <li><a href="https://www.ivytech.edu/admissions/apply-now/" target="_blank">Apply</a></li>
-            <li><a href="https://www.ivytech.edu/tuition-aid/tuition-fees/" target="_blank">Tuition</a></li>
+            <li><a href="https://www.ivytech.edu/admissions/apply-now/" target="_blank">Admission</a></li>
+            <li><a href="https://www.ivytech.edu/tuition-aid/tuition-fees/" target="_blank">Tuition & Costs</a></li>
             <li><a href="https://www.ivytech.edu/locations/" target="_blank">Campuses</a></li>
             <li></li>
         </ul>
